integrate client and backend apps

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /BackendApp/bin/Debug/net6.0
+/BackendApp/obj
+/.vs
