--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/BackendApp/bin/Debug/net6.0
-/BackendApp/obj
+/AngularNET.Api/bin
+/AngularNET.Api/obj
 /.vs
