archive artifact before upload

--- a/.github/workflows/angularnet_api_cicd.yml
+++ b/.github/workflows/angularnet_api_cicd.yml
@@ -19,11 +19,15 @@ jobs:
       run: dotnet build --configuration Release
     - name: Run the Publish
       run: dotnet publish --configuration Release --no-restore --output ./publish
+    - name: Archive artifact
+      uses: montudor/action-zip@v1
+      with:
+        args: zip -qq -r publish.zip ./publish
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
-        name: drop
-        path: ./publish
+        name: package
+        path: ./publish.zip
 
   deployment:
     name: "INTE"
@@ -35,7 +39,7 @@ jobs:
     - name: Download artifact
       uses: actions/download-artifact@v3
       with:
-        name: drop
+        name: publish
     - name: IIS Web App Deploy
       # You may pin to the exact commit or the version.
       # uses: cschleiden/webdeploy-action@48a2cdaf8aaa2bc762c12948ada3db14faead320
