description instead of name of inputs runner number

--- a/.github/workflows/angularnet_api_deploy_QA_cd.yml
+++ b/.github/workflows/angularnet_api_deploy_QA_cd.yml
@@ -6,7 +6,7 @@ on:
       runner_number:
         type: string
         required: true
-        name: 'Runner number of AngularNET DEV cicd'
+        description: 'Runner number of AngularNET DEV cicd'
 
 jobs:
   deployment:
